ministack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ministack
  namespace: ministack
spec:
  selector:
    app: ministack
  ports:
    - port: 4566
      targetPort: 4566
