ministack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stackport-ingress
  namespace: ministack
  annotations:
    cert-manager.io/cluster-issuer: "lab-ca-issuer"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - stackport.127-0-0-1.nip.io
      secretName: stackport-tls
  rules:
    - host: stackport.127-0-0-1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stackport
                port:
                  number: 8080
